<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">乐云购</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="get_more_ing">正在获取...</string>
    <string name="submit_ing">正在提交...</string>
    <string name="my_shopping_records">我的云购记录</string>
    <string name="my_obtained_goods">获得的商品</string>
    <string name="my_shaidan">我的晒单</string>
    <string name="shaidan">晒单</string>
    <string name="shaidan_share">晒单分享</string>
    <string name="shaidan_title">晒单标题</string>
    <string name="shaidan_detail">晒单详情</string>
    <string name="consume_detail">账户明细</string>
    <string name="all_shaidan_comment">所有评论</string>
    <string name="litmit_area">限购专区</string>
    <string name="nick_name_null">用户名不能为空</string>
    <string name="inputPass">请输入您的手机号/邮箱</string>
    <string name="inputnewnum">请输入您的手机号</string>
    <string name="inputnum">请输入您的密码</string>
    <string name="login">登 录</string>
    <string name="register">注册</string>
    <string name="forgotPass">忘记密码?</string>
    <string name="newUserRegister">新用户注册</string>
    <string name="other_login_type">选择登录方式</string>
    <string name="wx_not_installed">请先安装微信客户端</string>
    <string name="pass_error">密码错误</string>
    <string name="account_null">该帐号未注册</string>
    <string name="all_goods_type">全部分类</string>
    <string name="phone">手机数码</string>
    <string name="computer">电脑办公</string>
    <string name="appliance">家用电器</string>
    <string name="dressing">化妆个护</string>
    <string name="watch">钟表首饰</string>
    <string name="other">其他商品</string>
    <string name="edit_info">编辑个人资料</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="edit_password">密码设置</string>
    <string name="set_pwd">设置密码</string>
    <string name="login_pwd">登录密码</string>
    <string name="find_pwd">找回密码</string>
    <string name="hints_set_pwd">请设置8~20位的登录密码</string>
    <string name="hints_input_pwd">请输入8~20位密码</string>
    <string name="tips_find_pass">请输入您注册的手机号/邮箱</string>
    <string name="login_email">立即登录邮箱</string>
    <string name="show_password">显示密码</string>
    <string name="submit_complete">提交完成</string>
    <string name="submit_success">提交成功</string>
    <string name="modify_pwd_success">修改密码成功</string>
    <string name="complete">完成</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="no_photo">相册没有图片</string>
    <string name="register_complete">注册完成</string>
    <string name="addr_manage">收货地址管理</string>
    <string name="makesure_alter">确认修改</string>
    <string name="makesure">确认</string>
    <string name="can_used_balance">可用余额：</string>
    <string name="consume_record">消费记录</string>
    <string name="recharge">充值</string>
    <string name="recharge_sure">确认充值</string>
    <string name="recharge_detail">充值明细</string>
    <string name="net_back_recharge">网银充值</string>
    <string name="consume_detail_1">消费明细</string>
    <string name="plz_select_amount">请选择金额</string>
    <string name="binding_phone">绑定手机</string>
    <string name="binding_phone_number">手机号码绑定</string>
    <string name="safecenter">安全设置</string>
    <string name="app_tip">提示</string>
    <string name="binding_email">绑定邮箱</string>
    <string name="no_record">暂无数据</string>
    <string name="all_join_record">所有参与记录</string>
    <string name="un_binding">未绑定</string>
    <string name="no_drawing_mode">开启省流量模式</string>
    <string name="no_drawing_mode_tips">开启后部分图片将不再加载显示</string>
    <string name="help_center">帮助中心</string>
    <string name="feedback_information">意见反馈</string>
    <string name="customer_service_hotline">客服热线</string>
    <string name="setting">设置</string>
    <string name="dial_on">拨号</string>
    <string name="select">请选择</string>
    <string name="tips_nickname">昵称长度为2–20个字符，由汉字、字母、数字、“_ – ”组成</string>
    <string name="tips_tel">请输入联系方式</string>
    <string name="telephone_format_limit">0123456789+-()</string>
    <string name="hotline_num">4000–588–688</string>
    <string name="hotline_num_and_time">4000–588–688 (工作时间:9:00–21:00)</string>
    <string name="intent_dial_on">tel://4000–588–688</string>
    <string name="clean_cache">清除缓存</string>
    <string name="clean_cache_success">清除缓存成功</string>
    <string name="msg_setting">消息接收</string>
    <string name="msg_act">接收活动消息</string>
    <string name="current_version_is">当前版本：</string>
    <string name="version_update">版本更新</string>
    <string name="about">关于我们</string>
    <string name="time">时间</string>
    <string name="service_agreement">服务协议</string>
    <string name="tips_content">有意见？说两句！</string>
    <string name="logout">退出登录</string>
    <string name="logout_sure">确认退出登录?</string>
    <string name="alter_avatar">头像</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="nickname">昵称　　</string>
    <string name="signature">个性签名</string>
    <string name="alter_signature">修改签名</string>
    <string name="birthday_alter_limit">一年内只能修改一次</string>
    <string name="qq">QQ</string>
    <string name="set_qq">设置QQ</string>
    <string name="qq_tips">备用联系信息，不作公开</string>
    <string name="current_live">现居地</string>
    <string name="hometown">家乡</string>
    <string name="search">搜索</string>
    <string name="add">添加</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="send">发送</string>
    <string name="submit">提交</string>
    <string name="delete">删除</string>
    <string name="delete_sure">确认删除？</string>
    <string name="receive_sure">请确保您已收到您的商品再确认收货</string>
    <string name="address_add_new">填写收货地址</string>
    <string name="address_add_new_one">添加新地址</string>
    <string name="address_edit_receiptor">收 货 人</string>
    <string name="address_edit_phone">手 机 号</string>
    <string name="address_edit_receiptor_hint">请填写真实姓名，否则将无法进行配送</string>
    <string name="receipt_address_tips">请确保填写姓名为真实有效，否则将无法进行配送</string>
    <string name="address_edit_phone_hint">请填写正确的手机号码</string>
    <string name="address_edit_area">所在地区</string>
    <string name="address_edit_area_hint">请选择所在的地区</string>
    <string name="address_edit_street">所在街道</string>
    <string name="address_select">选择地址</string>
    <string name="address_edit_street_hint">请选择所在的街道</string>
    <string name="address_edit_addr">详细地址</string>
    <string name="address_edit_addr_hint">3–30个字符，不包含特殊符号</string>
    <string name="address_edit_addr_null_tips">请填写详细地址</string>
    <string name="address_edit_zip">邮    编</string>
    <string name="address_edit_zip_hint">(选填)</string>
    <string name="address_edit_is_default">设为默认地址</string>
    <string name="recent_search">最近搜索</string>
    <string name="newest">最新揭晓</string>
    <string name="hot_search">热门搜索</string>
    <string name="amount">金额</string>
    <string name="sack">啊哦！被抢光啦！</string>
    <string name="check_detail">查看详情</string>
    <string name="goods_detail">商品详情</string>
    <string name="clounds_detail">云购详情</string>
    <string name="cloundsNo">云购码</string>
    <string name="go_shopping">立即乐云购</string>
    <string name="login_now">立即登录</string>
    <string name="cart">购物车</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="cart_empty">购物车为空</string>
    <string name="add_address">填写地址</string>
    <string name="previous_period_gainer">上一云获得者</string>
    <string name="the_goods_has_stop_sell">本商品已结束云购</string>
    <string name="over">已揭晓！</string>
    <string name="has_stop_selling">已结束</string>
    <string name="has_stop_jioning">已满员</string>
    <string name="announce_result">揭晓结果</string>
    <string name="join_num">参与人次</string>
    <string name="confirm_to_pay">去支付</string>
    <string name="weixin_pay">微信支付</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="yl_pay">银联支付</string>
    <string name="aipay">卡付宝支付</string>
    <string name="to_shaidan">去晒单</string>
    <string name="js_pay">结算支付</string>
    <string name="check_express">查看物流</string>
    <string name="limit_notice">限购专区的每件商品每位会员参与人次设置上限，揭晓规则不变</string>
    <string name="fail_payed_goods">以下商品云购失败</string>
    <string name="success_payed_goods">以下商品云购成功</string>
    <string name="has_submited">已成功提交支付</string>
    <string name="check_shopping_record">查看参与记录</string>
    <string name="continue_shopping">继续购物</string>
    <string name="score_notice">您的积分不足，加油赚取积分吧</string>
    <string name="balance_notice">您的余额不足快去充值吧</string>
    <string name="submit_data">正在获取支付结果，请耐心等待...</string>
    <string name="cart_empty_nologin">您当前状态为未登录，可能导致购物车为空</string>
    <string name="tips_pay_fail">支付失败的商品金额将会退回您的云购账户</string>
    <string name="notice_blindphone">为了便于您及时收到通知信息，请立即绑定手机号</string>
    <string name="Announce_goods_des">平安银行 招财进宝金章Au9999 2g</string>
    <string name="tips_tel_num">请输入您的手机号</string>
    <string name="nextsteup">下 一 步</string>
    <string name="read_and_agree">我已阅读并同意</string>
    <string name="agreement">《乐云购服务协议》</string>
    <string name="change">正在发送验证码...</string>
    <string name="resend">重新发送</string>
    <string name="verify">身份验证</string>
    <string name="modifyPwd">修改密码</string>
    <string name="tips_default">默认</string>
    <string name="verify_failed">验证失败</string>
    <string name="register_success">注册成功</string>
    <string name="phone_alreay_regist">该手机号已注册</string>
    <string name="register_name_check">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="tips_verify_code">请输入系统发送给您的6位验证码</string>
    <string name="tips_set_pwd">密码由8~20位半角字符 (数字、字母、符号任意两种) 组成, 区分大小写</string>
    <string name="pwd_notice">"请输入至少6位数密码"</string>
    <string name="pwd_old">"请输入旧密码"</string>
    <string name="pwd_new">"请输入新密码"</string>
    <string name="pwd_again">"请再输入一次新密码"</string>
    <string name="pwd_not_null">"密码不能为空"</string>
    <string name="pwd_not_match">"两次密码输入不一致"</string>
    <string name="tips_input_verifycode">请输入验证码</string>
    <string name="tips_has_send_msg">已将验证码发送到您的手机，请注意查收</string>
    <string name="no_network">获取数据失败，请检查网络，点击屏幕重新加载</string>
    <string name="network_fail">网络连接失败</string>
    <string name="upload_avatar">上传头像</string>
    <string name="dl_msg_local_upload">本地上传</string>
    <string name="dl_msg_take_photo">拍照上传</string>
    <string name="upload_fail">上传失败</string>
    <string name="unknow_error">未知错误</string>
    <string name="set_success">设置成功</string>
    <string name="set_fail">设置失败</string>
    <string name="over_tips">已经超过100人次，云购有一定风险，请谨慎参与！</string>
    <string name="is_setting">正在设置...</string>
    <string name="header_hint_refresh_normal">下拉刷新</string>
    <string name="header_hint_refresh_ready">松开以刷新 </string>
    <string name="header_hint_refresh_loading">加载中&#8230;</string>
    <string name="header_hint_refresh_time">更新于：</string>
    <string name="footer_hint_load_normal">加载更多</string>
    <string name="footer_hint_load_ready">释放加载更多</string>
    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
</resources>
