<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/layout_reload"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:id="@+id/iv_reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/no_network"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name" />
    <TextView
        android:textSize="15.0sp"
        android:textColor="@color/declare_text"
        android:id="@+id/tv_reload2"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5.0dip"
        android:text="@string/no_record" />
    <TextView
        android:textSize="13.0sp"
        android:textColor="@color/declare_text"
        android:id="@+id/tv_reload1"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5.0dip"
        android:text="@string/no_network" />
    <Button
        android:id="@+id/login_now"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:background="@drawable/btn_radius_all_red2dim"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:enabled="true"
        android:textColor="@color/white"
        android:visibility="invisible"
        android:text="@string/login_now"/>

</LinearLayout>