<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/setting_background"
    xmlns:hq="http://schemas.android.com/apk/res-auto"
    tools:context="com.haoqi.yungou.Activity.user.ModifyPwdActivity">
    <com.haoqi.yungou.customView.NavigationView
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        hq:leftBackgroud="@drawable/previous_pre"
        hq:title ="@string/modifyPwd"/>
    <EditText
        android:textSize="15sp"
        android:textColor="@color/black_text"
        android:textColorHint="@color/tips_text"
        android:gravity="center|left"
        android:id="@+id/edit_old"
        android:background="@drawable/btn_radius_all_normal"
        android:layout_width="fill_parent"
        android:padding="5dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:hint="@string/pwd_old"
        android:singleLine="true"
        android:minEms="6"
        android:digits="@string/register_name_check"
        android:inputType="textPassword" />
        <EditText
            android:textSize="15sp"
            android:textColor="@color/black_text"
            android:textColorHint="@color/tips_text"
            android:gravity="center|left"
            android:id="@+id/edit_one"
            android:background="@drawable/btn_radius_all_normal"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:padding="5dp"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:hint="@string/pwd_new"
            android:layout_marginTop="2dp"
            android:singleLine="true"
            android:minEms="6"
            android:digits="@string/register_name_check"
            android:inputType="textPassword" />
        <EditText
            android:textSize="15sp"
            android:textColor="@color/black_text"
            android:textColorHint="@color/tips_text"
            android:gravity="center|left"
            android:id="@+id/edit_two"
            android:background="@drawable/btn_radius_all_normal"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:hint="@string/pwd_again"
            android:singleLine="true"
            android:maxLength="8"
            android:padding="5dp"
            android:minEms="6"
            android:digits="@string/register_name_check"
            android:inputType="textPassword" />
    <Button
        android:textSize="17sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/btn_next"
        android:background="@drawable/btn_radius_all_red2dim"
        android:onClick="modify"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/confirm" />
</LinearLayout>
