<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:background="@color/setting_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hq="http://schemas.android.com/apk/res-auto">
    <com.haoqi.yungou.customView.NavigationView
        android:id="@+id/titlebar_edit_address"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_alignParentTop="true"
        hq:leftBackgroud ="@drawable/previous_pre"
        hq:title ="@string/address_add_new"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/item_normal_bg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_edit_receiptor"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/default_gap"
            android:id="@+id/tv_receiptor" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/et_receiptor"
            android:layout_centerVertical="true"
            android:hint="@string/address_edit_receiptor_hint"
            android:textSize="@dimen/text_small"
            android:singleLine="true"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:layout_toRightOf="@+id/tv_receiptor"
            android:layout_toEndOf="@+id/tv_receiptor" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/default_gap"
        android:background="@color/declare_text"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/item_normal_bg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_edit_phone"
            android:layout_marginLeft="@dimen/default_gap"
            android:layout_centerVertical="true"
            android:id="@+id/tv_phone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/et_phone"
            android:layout_centerVertical="true"
            android:hint="@string/address_edit_phone_hint"
            android:textSize="@dimen/text_small"
            android:maxLength="11"
            android:singleLine="true"
            android:inputType="phone"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:layout_toRightOf="@+id/tv_phone"
            android:layout_toEndOf="@+id/tv_phone" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/default_gap"
        android:background="@color/declare_text"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/item_normal_bg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_edit_area"
            android:layout_marginLeft="@dimen/default_gap"
            android:layout_centerVertical="true"
            android:id="@+id/tv_area" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/et_area"
            android:layout_centerVertical="true"
            android:hint="@string/address_edit_area_hint"
            android:textSize="@dimen/text_small"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:layout_toRightOf="@+id/tv_area"
            android:layout_toEndOf="@+id/tv_area" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/default_gap"
        android:background="@color/declare_text"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/item_normal_bg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_edit_addr"
            android:layout_marginLeft="@dimen/default_gap"
            android:layout_centerVertical="true"
            android:id="@+id/tv_detail_address" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/et_detail_address"
            android:layout_centerVertical="true"
            android:hint="@string/address_edit_addr_hint"
            android:textSize="@dimen/text_small"
            android:singleLine="true"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:layout_toRightOf="@+id/tv_detail_address"
            android:layout_toEndOf="@+id/tv_detail_address" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/default_gap"
        android:background="@color/declare_text"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/item_normal_bg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="邮       编"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/default_gap"
            android:id="@+id/tv_mail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/et_mail"
            android:layout_centerVertical="true"
            android:hint="@string/address_edit_zip_hint"
            android:textSize="@dimen/text_small"
            android:inputType="numberSigned"
            android:singleLine="true"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:layout_toRightOf="@+id/tv_mail"
            android:layout_toEndOf="@+id/tv_mail" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/default_gap"
        android:background="@drawable/item_normal_bg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_edit_is_default"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/default_gap"
            android:id="@+id/tv_set_default" />
        <com.haoqi.yungou.widget.SlideSwitch
            android:id="@+id/address_defualt"
            android:layout_width="50dp"
            android:layout_height="25.0dip"
            android:layout_marginRight="8dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            hq:isOpen="false"
            hq:shape="circle"
            hq:themeColor="@color/theme" />
    </RelativeLayout>
    <Button
        android:textSize="@dimen/text_medium"
        android:textColor="@color/white"
        android:id="@+id/bth_submit_address"
        android:background="@drawable/button_go_shopping"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/submit"
        android:layout_alignParentBottom="true" />

</LinearLayout>