<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:hq="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.haoqi.yungou.Activity.FeedBackActivity">
    <com.haoqi.yungou.customView.NavigationView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        hq:leftBackgroud ="@drawable/previous_pre"
        hq:title = "@string/feedback_information"/>
    <ScrollView
        android:id="@+id/scrollview"
        android:scrollbars="none"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/title_bar">
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">
                <Spinner
                    android:id="@+id/spinner"
                    android:background="@drawable/layout_radius_all_white_stroke_gray"
                    android:padding="10.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:layout_alignParentLeft="true" />
                <ImageView android:id="@+id/iv"
                    android:background="@drawable/gray_arrows_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10.0dip"
                    android:scaleType="centerCrop"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name" />
                <TextView
                    android:textSize="15sp"
                    android:textColor="@color/declare_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5.0dip"
                    android:text="@string/select"
                    android:layout_toLeftOf="@+id/iv"
                    android:layout_centerVertical="true" />
            </RelativeLayout>
            <EditText
                android:textSize="15sp"
                android:textColor="@color/black_text"
                android:textColorHint="@color/tips_text"
                android:gravity="center|left"
                android:id="@+id/et_telephone"
                android:background="@drawable/layout_radius_all_white_stroke_gray"
                android:padding="8.0dip"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/tips_tel"
                android:singleLine="true"
                android:maxLength="20"
                android:digits="@string/telephone_format_limit"
                android:inputType="phone" />
            <EditText
                android:textSize="15sp"
                android:textColor="@color/black_text"
                android:textColorHint="@color/tips_text"
                android:gravity="center|left|top"
                android:id="@+id/et_content"
                android:background="@drawable/layout_radius_all_white_stroke_gray"
                android:padding="8.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/tips_content"
                android:lines="6" />
            <TextView android:textSize="15sp"
                android:textColor="@color/black_text"
                android:textColorHint="@color/tips_text"
                android:gravity="center|left"
                android:id="@+id/tv_report_log"
                android:background="@drawable/layout_radius_all_white_stroke_gray"
                android:padding="8dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:singleLine="true"
                android:lineSpacingExtra="2.0dip"
                android:visibility="gone"/>
            <Button
                android:textSize="17sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:id="@+id/btn_submit"
                android:background="@drawable/btn_radius_all_red2dim"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
