<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:sx="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Activity.user.AccountDetailActivity">
    <com.haoqi.yungou.customView.NavigationView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        sx:leftBackgroud ="@drawable/previous_pre"
        sx:title = "@string/consume_detail"/>
    <LinearLayout
        android:id="@+id/search_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_recharge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/all_stroke_pressed"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black_text"
            android:text="@string/recharge_detail" />
        <Button
            android:id="@+id/btn_consume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black_text"
            android:background="@drawable/all_stroke"
            android:text="@string/consume_detail_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/cursor"
            android:layout_width="0dp"
            android:layout_height="0.9dp"
            android:layout_weight="1"
            android:background="@drawable/btn_radius_all_red" />

        <ImageView
            android:id="@+id/cursor2"
            android:layout_width="0dp"
            android:layout_height="0.9dp"
            android:layout_weight="1"
            android:src="@drawable/btn_radius_all_red"
            android:visibility="invisible" />
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/all_stroke_normal">
      <TextView
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:textColor="@color/gray_text"
          android:gravity="center"
          android:padding="5dp"
          android:text="@string/time" />
      <TextView
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:textColor="@color/gray_text"
          android:gravity="center"
          android:padding="5dp"
          android:text="资金渠道" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_text"
            android:text="@string/amount"
            android:padding="5dp"
            android:gravity="center" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView" />
</LinearLayout>